--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
     }
    ],
    "source": [
-    "palermo = n"
+    "palermo = neighborhoods [0\n",
+    "                        ]"
    ]
   },
   {
