--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neighborhoods.append [la_boca]\n"
+    "la_boca = neighborhoods.append la_boca]\n"
    ]
   },
   {
