--- a/index.ipynb
+++ b/index.ipynb
@@ -74,11 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Palermo'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "palermo = neighborhoods [0]"
+    "palermo = neighborhoods [0]\n",
+    "palermo"
    ]
   },
   {
