Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,11 +102,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La Boca'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "la_boca = neighborhoods [-1]\n"
+    "la_boca = neighborhoods [-1]\n",
+    "la_boca\n"
    ]
   },
   {
