--- a/index.ipynb
+++ b/index.ipynb
@@ -158,11 +158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ba_longitude' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-8d300debe8e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mba_latitude\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mba_longitude\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'ba_longitude' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "ba_latitude = ba_"
+    "ba_latitude = ba_longitude"
    ]
   },
   {
